lib/src/pq/generated_bindings_pq.dart


  late final _PQresultErrorMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>)>>('PQresultErrorMessage');
  late final _PQresultErrorMessage = _PQresultErrorMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQresultVerboseErrorMessage(
    ffi.Pointer<PGresult> res,
    int verbosity,
    int show_context,
  ) {
    return _PQresultVerboseErrorMessage(
      res,
      verbosity,
      show_context,
    );
  }

  late final _PQresultVerboseErrorMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>, ffi.Int32,
              ffi.Int32)>>('PQresultVerboseErrorMessage');
  late final _PQresultVerboseErrorMessage =
      _PQresultVerboseErrorMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>, int, int)>();

  ffi.Pointer<ffi.Char> PQresultErrorField(
    ffi.Pointer<PGresult> res,
    int fieldcode,
  ) {
    return _PQresultErrorField(
      res,
      fieldcode,
    );
  }

  late final _PQresultErrorFieldPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>, ffi.Int)>>('PQresultErrorField');
  late final _PQresultErrorField = _PQresultErrorFieldPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>, int)>();

  int PQntuples(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQntuples(
      res,
    );
  }

  late final _PQntuplesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>)>>(
          'PQntuples');
  late final _PQntuples =
      _PQntuplesPtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  int PQnfields(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQnfields(
      res,
    );
  }

  late final _PQnfieldsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>)>>(
          'PQnfields');
  late final _PQnfields =
      _PQnfieldsPtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  int PQbinaryTuples(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQbinaryTuples(
      res,
    );
  }

  late final _PQbinaryTuplesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>)>>(
          'PQbinaryTuples');
  late final _PQbinaryTuples =
      _PQbinaryTuplesPtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQfname(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQfname(
      res,
      field_num,
    );
  }

  late final _PQfnamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>, ffi.Int)>>('PQfname');
  late final _PQfname = _PQfnamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>, int)>();

  int PQfnumber(
    ffi.Pointer<PGresult> res,
    ffi.Pointer<ffi.Char> field_name,
  ) {
    return _PQfnumber(
      res,
      field_name,
    );
  }

  late final _PQfnumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGresult>, ffi.Pointer<ffi.Char>)>>('PQfnumber');
  late final _PQfnumber = _PQfnumberPtr.asFunction<
      int Function(ffi.Pointer<PGresult>, ffi.Pointer<ffi.Char>)>();

  int PQftable(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQftable(
      res,
      field_num,
    );
  }

  late final _PQftablePtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGresult>, ffi.Int)>>(
          'PQftable');
  late final _PQftable =
      _PQftablePtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  int PQftablecol(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQftablecol(
      res,
      field_num,
    );
  }

  late final _PQftablecolPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int)>>(
      'PQftablecol');
  late final _PQftablecol =
      _PQftablecolPtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  int PQfformat(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQfformat(
      res,
      field_num,
    );
  }

  late final _PQfformatPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int)>>(
      'PQfformat');
  late final _PQfformat =
      _PQfformatPtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  int PQftype(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQftype(
      res,
      field_num,
    );
  }

  late final _PQftypePtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGresult>, ffi.Int)>>(
          'PQftype');
  late final _PQftype =
      _PQftypePtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  int PQfsize(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQfsize(
      res,
      field_num,
    );
  }

  late final _PQfsizePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int)>>(
      'PQfsize');
  late final _PQfsize =
      _PQfsizePtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  int PQfmod(
    ffi.Pointer<PGresult> res,
    int field_num,
  ) {
    return _PQfmod(
      res,
      field_num,
    );
  }

  late final _PQfmodPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>, ffi.Int)>>(
      'PQfmod');
  late final _PQfmod =
      _PQfmodPtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  ffi.Pointer<ffi.Char> PQcmdStatus(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQcmdStatus(
      res,
    );
  }

  late final _PQcmdStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>)>>('PQcmdStatus');
  late final _PQcmdStatus = _PQcmdStatusPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQoidStatus(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQoidStatus(
      res,
    );
  }

  late final _PQoidStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>)>>('PQoidStatus');
  late final _PQoidStatus = _PQoidStatusPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>)>();

  int PQoidValue(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQoidValue(
      res,
    );
  }

  late final _PQoidValuePtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGresult>)>>(
          'PQoidValue');
  late final _PQoidValue =
      _PQoidValuePtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQcmdTuples(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQcmdTuples(
      res,
    );
  }

  late final _PQcmdTuplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>)>>('PQcmdTuples');
  late final _PQcmdTuples = _PQcmdTuplesPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>)>();

  ffi.Pointer<ffi.Char> PQgetvalue(
    ffi.Pointer<PGresult> res,
    int tup_num,
    int field_num,
  ) {
    return _PQgetvalue(
      res,
      tup_num,
      field_num,
    );
  }

  late final _PQgetvaluePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGresult>, ffi.Int, ffi.Int)>>('PQgetvalue');
  late final _PQgetvalue = _PQgetvaluePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGresult>, int, int)>();

  int PQgetlength(
    ffi.Pointer<PGresult> res,
    int tup_num,
    int field_num,
  ) {
    return _PQgetlength(
      res,
      tup_num,
      field_num,
    );
  }

  late final _PQgetlengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGresult>, ffi.Int, ffi.Int)>>('PQgetlength');
  late final _PQgetlength = _PQgetlengthPtr.asFunction<
      int Function(ffi.Pointer<PGresult>, int, int)>();

  int PQgetisnull(
    ffi.Pointer<PGresult> res,
    int tup_num,
    int field_num,
  ) {
    return _PQgetisnull(
      res,
      tup_num,
      field_num,
    );
  }

  late final _PQgetisnullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGresult>, ffi.Int, ffi.Int)>>('PQgetisnull');
  late final _PQgetisnull = _PQgetisnullPtr.asFunction<
      int Function(ffi.Pointer<PGresult>, int, int)>();

  int PQnparams(
    ffi.Pointer<PGresult> res,
  ) {
    return _PQnparams(
      res,
    );
  }

  late final _PQnparamsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGresult>)>>(
          'PQnparams');
  late final _PQnparams =
      _PQnparamsPtr.asFunction<int Function(ffi.Pointer<PGresult>)>();

  int PQparamtype(
    ffi.Pointer<PGresult> res,
    int param_num,
  ) {
    return _PQparamtype(
      res,
      param_num,
    );
  }

  late final _PQparamtypePtr =
      _lookup<ffi.NativeFunction<Oid Function(ffi.Pointer<PGresult>, ffi.Int)>>(
          'PQparamtype');
  late final _PQparamtype =
      _PQparamtypePtr.asFunction<int Function(ffi.Pointer<PGresult>, int)>();

  ffi.Pointer<PGresult> PQdescribePrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmt,
  ) {
    return _PQdescribePrepared(
      conn,
      stmt,
    );
  }

  late final _PQdescribePreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQdescribePrepared');
  late final _PQdescribePrepared = _PQdescribePreparedPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGresult> PQdescribePortal(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> portal,
  ) {
    return _PQdescribePortal(
      conn,
      portal,
    );
  }

  late final _PQdescribePortalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQdescribePortal');
  late final _PQdescribePortal = _PQdescribePortalPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsendDescribePrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmt,
  ) {
    return _PQsendDescribePrepared(
      conn,
      stmt,
    );
  }

  late final _PQsendDescribePreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQsendDescribePrepared');
  late final _PQsendDescribePrepared = _PQsendDescribePreparedPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsendDescribePortal(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> portal,
  ) {
    return _PQsendDescribePortal(
      conn,
      portal,
    );
  }

  late final _PQsendDescribePortalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQsendDescribePortal');
  late final _PQsendDescribePortal = _PQsendDescribePortalPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGresult> PQclosePrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmt,
  ) {
    return _PQclosePrepared(
      conn,
      stmt,
    );
  }

  late final _PQclosePreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQclosePrepared');
  late final _PQclosePrepared = _PQclosePreparedPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGresult> PQclosePortal(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> portal,
  ) {
    return _PQclosePortal(
      conn,
      portal,
    );
  }
